src/objects/Deactivate_Trigger__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>After_Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>After Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>After_Insert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>After Insert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>After_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>After Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Before_Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Before Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Before_Insert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Before Insert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Before_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Before Update</label>
        <type>Checkbox</type>
    </fields>
    <label>Deactivate Trigger</label>
</CustomObject>